k8/d20md.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2019-08-24T08:08:27Z","generation":1,"labels":{"app":"d20md"},"name":"d20md","namespace":"d20md","resourceVersion":"3070401","selfLink":"/apis/extensions/v1beta1/namespaces/d20md/deployments/d20md","uid":"d0831802-951a-46ad-ab48-5947e8526ceb"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"a [...]
  creationTimestamp: "2019-08-27T08:35:59Z"
  generation: 1
  labels:
    app: d20md
  name: d20md
  namespace: d20md
  resourceVersion: "3356894"
  selfLink: /apis/extensions/v1beta1/namespaces/d20md/deployments/d20md
  uid: 9b9608d1-54f0-4b40-9db3-13ed68f620cb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: d20md
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: d20md
    spec:
      containers:
      - env:
        - name: DB_NAME
          valueFrom:
            secretKeyRef:
              key: database
              name: mysql-credentials
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: mysql-credentials
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mysql-credentials
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: jwtSecret
              name: d20md-secret
        - name: RECAPTCHA_SECRET
          valueFrom:
            secretKeyRef:
              key: recaptchaSecret
              name: d20md-secret
        image: sirwojtek/d20md:latest
        imagePullPolicy: Always
        name: d20md
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /root/.aws
          name: aws-credentials
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 600
      volumes:
      - name: aws-credentials
        secret:
          defaultMode: 420
          secretName: aws-credentials
status:
  conditions:
  - lastTransitionTime: "2019-08-27T08:35:59Z"
    lastUpdateTime: "2019-08-27T08:35:59Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2019-08-27T08:35:59Z"
    lastUpdateTime: "2019-08-27T08:35:59Z"
    message: ReplicaSet "d20md-56cf4c7ff" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
