k8/d20md.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: d20md
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: d20md
    servicePort: 3000
